--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -10,6 +10,7 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="/" class="nav-link px-2 text-secondary">CyberGames</a></li>
+                    <li><a href="/devblog/add" class="nav-link px-2 text-white">Добавить новость</a></li>
                     <li><a href="/games" class="nav-link px-2 text-white">Игры</a></li>
                     <li><a href="/about" class="nav-link px-2 text-white">О нас</a></li>
                 </ul>
