--- a/src/main/resources/templates/devblog.html
+++ b/src/main/resources/templates/devblog.html
@@ -13,11 +13,14 @@
 <!-- Содержание -->
 <div class="container mt-5">
     <h1 th:text="${title}"></h1>
-    <div th:each="el : ${posts}" class="alert alert-info mt-2">
+    <div th:each="el : ${post}" class="alert alert-info mt-2">
         <h3 th:text="${el.title}"/>
-        <p th:text="${el.anons}"/>
+        <p th:text="${el.full_text}"/>
         <p th:text="${el.actionDate}"/>
-        <a th:href="'/devblog/' + ${el.id}" class="btn btn-warning">Детальнее</a>
+        <a th:href="'/devblog/' + ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a><br><br>
+        <form th:action="'/devblog/' + ${el.id} + '/remove'" method="post">
+            <button class="btn btn-warning" type="submit">Удалить</button>
+        </form>
     </div>
 </div>
 
