--- a/src/main/resources/templates/games.html
+++ b/src/main/resources/templates/games.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymleaf.org">
 <head>
-  <title th:text="${title}"></title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <title th:text="${title}"></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -12,7 +12,11 @@
 
 <!-- Содержание -->
 <div class="container mt-5">
-  <h1 th:text="${title}"></h1>
+    <h1 th:text="${title}"></h1>
+    <a href="games/2048">
+        <img src="https://play-lh.googleusercontent.com/YMjBRDCr5a9p_bdWnMTWKrC3FNi40WsR4jXt1UXlNMZfRhoXQL3eAkIwXAk5wwQZ_g"
+             height="200" width="200">
+    </a>
 </div>
 
 <!-- footer-->
