--- a/src/main/resources/templates/2048.html
+++ b/src/main/resources/templates/2048.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymleaf.org">
 <head>
-    <link rel="stylesheet" type="text/css" href="../static/css/2048.css">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>2048</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title th:text="${title}"></title>
+    <link rel="stylesheet" href="/css/2048.css">
 </head>
 <body>
+<div class="container">
+    <div class="game-header">
+        <h1>2048</h1>
+        <div class="controls">
+            <p class="info">
+                Score: <span class="game-score">0</span>
+            </p>
+            <button class="button start">Start</button>
+        </div>
+    </div>
 
-<script src="../static/js/2048.js"></script>
+    <table class="game-field">
+        <tbody>
+        <tr class="field-row">
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+        </tr>
 
+        <tr class="field-row">
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+        </tr>
+
+
+        <tr class="field-row">
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+        </tr>
+
+
+        <tr class="field-row">
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+            <td class="field-cell"></td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div class="message-container">
+        <p class="message message-lose hidden">You lose! Restart the game?</p>
+        <p class="message message-win hidden">Winner! Congrats! You did it!</p>
+        <p class="message message-start">Press "Start" to begin game. Good luck!</p>
+    </div>
+</div>
+<script type="text/javascript" src="/js/2048.js"></script>
 </body>
 </html>
